<resources>
    <string name="app_name">LDM</string>
    <string name="home_logo">Home Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="instagram_button">Instagram Button</string>
    <string name="gmail_button">Gmail Button</string>
    <string name="facebook_button">Facebook Button</string>
    <string name="please_login_or_sign_up_to_continue_our_app">Please login or sign up to continue our app.</string>
    <string name="welcome">Welcome!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_a_new_account">Create a new account.</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_accept_the_general_terms_conditions_of_use"><![CDATA[I accept the general terms & conditions of use.]]></string>
    <string name="back_button">Back Button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="cart">Cart</string>
    <string name="about_us">About Us</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint_message">Please Sign-In or Create a new account.</string>
    <string name="loin_d_moyenne">LOIN DÉ MOYENNE</string>
    <string name="developed_by">Developed by:-</string>
    <string name="create_an_account">Create an account</string>
    <string name="please_enter_your_email_and_the_new_password">Please enter your email and the new password.</string>
    <string name="mines">–</string>
    <string name="plus">+</string>
    <string name="small">S</string>
    <string name="medium">M</string>
    <string name="large">L</string>
    <string name="xlarge">XL</string>
    <string name="one_size">One Size</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="place_order">Place Order</string>
    <string name="about_ldm">We want to make fashion sustainable and sustainability fashionable. The commitment of our employees is key to our success. We are dedicated to creating a better fashion future and we use our size and scale to drive development towards a more circular, fair and equal fashion industry.</string>
    <string name="email_">Email :</string>
    <string name="phone_">Phone Number :</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="ahmed_adel">Ahmed Adel</string>
    <string name="mohammed_jamal">Mohammed Jamal</string>
    <string name="omar_ahmed">Omar Ahmed</string>
    <string name="ayman_ashraf">Ayman Ashraf</string>
</resources>